18 / 12 / 7 / 35 / 4

2.4.7
- Fix Abyssal Will
- Fix compat with right click equip curios

2.4.6
- Fix server launch crash

2.4.5
- Add config to chest loot
- Fix curse of flesh
- Fix Abyssal set not taking effect
- Fix pandora slot desync in client when taking out curses in non-first row

2.4.4
- Add Abyssal / Barbaric / Evil Spirit series, charm of luck
- Add 4 weapons
- Add crafting ingredients, tweak recipes
-

2.4.3
- Fix language
- Recipe adjustment
- Fix toml dependency check
- Incorporate L2Complement immunity config for immunity orbs

2.4.2
- Fix L2Hostility code dependency, fix bugs