@@ -13,7 +13,7 @@ jei_version = 15.2.0.23
 curios_version = 5.5.0+1.20.1
 
 modid = curseofpandora
-ll_version = 2.4.7-pre0
+ll_version = 2.4.7
 lljij = true
 rootMod = false
 
